# stutter-classification

./: .gitignore  OLD_soundrep_classification.ipynb  README.md  SoundRep.mlmodel  common.py  pyproject.toml  soundrep_classification.ipynb  stutter-sep28k.ipynb
data/: sep28k-mfcc.csv
stutter-classification/data/: feature_extraction.py  sep28k_data.py
stutter-classification/gui/: app.py  recorder.py
stutter-classification/models/: stutter_model.py
stutter_classification/: common.py  generate_mfcc_datasets.ipynb  soundrep_classification.ipynb  test_models.ipynb
stutter_classification/data/: feature_extraction.py  sep28k_data.py
stutter_classification/gui/: app.py  recorder.py  utils.py
stutter_classification/models/: __init__.py  all_features.py  single_feature.py  stutter_model.py
stutter_classification/models/base/: stutter_model.py
